--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -20,7 +20,7 @@ footer{
 }
 
 
-@media screen and (min-width: 768px){
+@media screen and (max-width: 768px){
     body{
         background-color: #000;
         color: #FFF;
